--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mySchema?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://database-products.cewsh2simkpf.eu-west-2.rds.amazonaws.com:3306/prods?serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=anadoraletca
